[package]
name = "erasure-isa-l"
version = "0.1.0"
edition = "2024"
description = "Bindings to the isa-l library for erasure coding operations"
repository = "https://github.com/LokyinZHAO/erasure-isa-l"
readme = "README.md"
license = "MIT"
categories = ["api-bindings"]
keywords = ["intel", "isa-l", "bindings", "storage", "erasure-coding"]
authors = ["Lokyin ZHAO <lokyinzhao.work@icloud.com>"]

[dependencies]
erasure-isa-l-sys = "1.0.1"
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.9.1"
